<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_modes_benchmark</name>
  <version>0.1.0</version>
  <description>
   First approaximation to safety system using system modes
  </description>

  <author email="fmrico@gmail.com">Francisco Martín</author>
  <maintainer email="fmrico@gmail.com">Francisco Martín</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>system_modes_msgs</depend>
  <depend>system_modes</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_system_modes</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
